src/test/ui/feature-gates/feature-gate-const_generics-ptr.stderr
error[E0658]: const generics are unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:1:22
   |
LL | struct ConstFn<const F: fn()>;
   |                      ^
   |
   = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information
   = help: add `#![feature(min_const_generics)]` to the crate attributes to enable

error[E0658]: const generics are unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:5:23
   |
LL | struct ConstPtr<const P: *const u32>;
   |                       ^
   |
   = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information
   = help: add `#![feature(min_const_generics)]` to the crate attributes to enable

error: using function pointers as const generic parameters is forbidden
  --> $DIR/feature-gate-const_generics-ptr.rs:1:25
   |
LL | struct ConstFn<const F: fn()>;
   |                         ^^^^

error: using raw pointers as const generic parameters is forbidden
  --> $DIR/feature-gate-const_generics-ptr.rs:5:26
   |
LL | struct ConstPtr<const P: *const u32>;
   |                          ^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
